--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -43,6 +44,9 @@
                   </ImageView>
                   <Label id="infoText" fx:id="infoScreen" text="Select terminal to start...." />
                </children>
+               <padding>
+                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+               </padding>
             </VBox>
             <MenuBar GridPane.columnSpan="2147483647">
               <menus>
