--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" keyForm="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Tooltip?>
