--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/ProgressDialog.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/ProgressDialog.fxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" keyForm="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
