Code reformat + cleanup

--- a/app/gui/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
+++ b/app/gui/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
@@ -4,11 +4,13 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
 <?import pl.marcinchwedczuk.rfid.gui.MaskedTextField?>
-
-<fx:root alignment="CENTER_LEFT" stylesheets="@KeyBox.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-   <MaskedTextField fx:id="keyTextField" minWidth="-Infinity" prefColumnCount="18" styleClass="keyField" HBox.hgrow="ALWAYS">
-      <tooltip>
-         <Tooltip fx:id="validationTooltip" autoHide="true" styleClass="validationTooltip" text="Empty Tooltip" />
-      </tooltip></MaskedTextField>
-   <ChoiceBox fx:id="modeMenu" minWidth="-Infinity" />
+<fx:root alignment="CENTER_LEFT" stylesheets="@KeyBox.css" type="javafx.scene.layout.HBox"
+         xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+    <MaskedTextField fx:id="keyTextField" minWidth="-Infinity" prefColumnCount="18" styleClass="keyField"
+                     HBox.hgrow="ALWAYS">
+        <tooltip>
+            <Tooltip fx:id="validationTooltip" autoHide="true" styleClass="validationTooltip" text="Empty Tooltip"/>
+        </tooltip>
+    </MaskedTextField>
+    <ChoiceBox fx:id="modeMenu" minWidth="-Infinity"/>
 </fx:root>
