--- a/app/gui/src/main/java/pl/marcinchwedczuk/rfid/gui/settings/SettingsWindow.fxml
+++ b/app/gui/src/main/java/pl/marcinchwedczuk/rfid/gui/settings/SettingsWindow.fxml
@@ -184,21 +184,21 @@
                                                                 wrapText="true"/>
                                                     </tooltip>
                                                 </Label>
-                                                <ChoiceBox fx:id="autoPiccPoolingCB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="autoPiccPooling" prefWidth="150.0"
                                                            GridPane.columnIndex="2"/>
-                                                <ChoiceBox fx:id="autoAtsGenerationCB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="autoAtsGeneration" prefWidth="150.0"
                                                            GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                                                <ChoiceBox fx:id="pollingIntervalCB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="pollingInterval" prefWidth="150.0"
                                                            GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-                                                <ChoiceBox fx:id="feliCa424KCB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="feliCa424K" prefWidth="150.0"
                                                            GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-                                                <ChoiceBox fx:id="feliCa212KCB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="feliCa212K" prefWidth="150.0"
                                                            GridPane.columnIndex="2" GridPane.rowIndex="4"/>
-                                                <ChoiceBox fx:id="topazCB" prefWidth="150.0" GridPane.columnIndex="2"
+                                                <ChoiceBox fx:id="topaz" prefWidth="150.0" GridPane.columnIndex="2"
                                                            GridPane.rowIndex="5"/>
-                                                <ChoiceBox fx:id="isoTypeB_CB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="isoTypeB" prefWidth="150.0"
                                                            GridPane.columnIndex="2" GridPane.rowIndex="6"/>
-                                                <ChoiceBox fx:id="isoTypeA_CB" prefWidth="150.0"
+                                                <ChoiceBox fx:id="isoTypeA" prefWidth="150.0"
                                                            GridPane.columnIndex="2" GridPane.rowIndex="7"/>
                                                 <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="8">
                                                     <padding>
